--- a/restd/Makefile
+++ b/restd/Makefile
@@ -23,7 +23,8 @@ _DEPS = config.h serialnum.h init.h puller.h fastpool.h threadqueue.h dfxp.h all
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
 #_OBJS = fastpool.o threadqueue.o config.o serialnum.o init.o dfxp.o allocator.o pool.o comm.o udpcomm.o cjson.o restful.o classifyapp.o
-_OBJS = fastpool.o threadqueue.o config.o serialnum.o init.o allocator.o pool.o comm.o udpcomm.o cjson.o puller.o restful.o classifyapp.o
+#_OBJS = fastpool.o threadqueue.o config.o serialnum.o init.o allocator.o pool.o comm.o udpcomm.o cjson.o puller.o restful.o classifyapp.o
+_OBJS = fastpool.o threadqueue.o config.o serialnum.o init.o cjson.o puller.o restful.o classifyapp.o
 OBJS = $(patsubst %,$(ODIR)/%,$(_OBJS))
 
 $(ODIR)/%.o: $(SRC)/%.c $(DEPS)
