--- a/restd/Makefile
+++ b/restd/Makefile
@@ -6,7 +6,7 @@ include config.mak
 # set GPU=1 and CUDNN=1 to speedup on GPU
 GPU=1
 CUDNN=1
-OPENCV=0
+OPENCV=1
 OPENMP=1
 DEBUG=0
 
@@ -23,7 +23,7 @@ ARCH= -gencode arch=compute_30,code=sm_30 \
 # ARCH= -gencode arch=compute_70,code=[sm_70,compute_70]
 
 # GeForce RTX 2080 Ti, RTX 2080, RTX 2070	Quadro RTX 8000, Quadro RTX 6000, Quadro RTX 5000	Tesla T4
-# ARCH= -gencode arch=compute_75,code=[sm_75,compute_75]
+ARCH= -gencode arch=compute_75,code=[sm_75,compute_75]
 
 # Jetson XAVIER
 # ARCH= -gencode arch=compute_72,code=[sm_72,compute_72]
